sample-app/k8s/base/service-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: book-app
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
