sample-app/k8s/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: book-app
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
