sample-app/k8s/base/service-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: book-app
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
