sample-app/k8s/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: book-app
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
