sample-app/k8s/base/service-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: book-app
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
